// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fleet-members/BasicInformation Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      <h3
        class="grey--text"
      >
        
      Basic Information
    
      </h3>
       
      <!---->
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout pa-3 row wrap"
    >
      <div
        class="flex xs12 lg8 pr-3"
      >
        <div
          class="layout row wrap"
        >
          <div
            class="flex xs12 md9 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Fleet member name
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md3"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Type
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md8"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Tags
          
            </div>
             
            <div
              class="v-input mb-4 v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              hide-details=""
              no-filter=""
              outline=""
              solo=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      autocomplete="off"
                      avatar-key="avatarKey"
                      placeholder="Type a tag"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md4 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Size of the truck / trailer
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="input value"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div
            class="layout mb-2 row wrap"
          >
            <div
              class="flex xs12 md4 pr-2"
            >
              <div
                class="text-uppercase grey--text font-weight-bold"
              >
                
              Square account
              
                <button
                  class="v-btn v-btn--icon v-btn--small theme--light"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey--text"
                      style="font-size: 16px;"
                    >
                      info
                    </i>
                  </div>
                </button>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                You will be prompted to enter 
                    <br />
                     your Square Credentials and share 
                    <br />
                     your transactional data with Food Fleet
              
                  </div>
                </span>
              </div>
               
              <button
                class="v-btn v-btn--depressed theme--light primary"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Connect
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12 md4 pr-2 pl-2"
            >
              <div
                class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
              >
                
              Square business name
              
                <i
                  aria-hidden="true"
                  class="v-icon ff-fleet-members__tooltip-icon material-icons theme--light grey--text"
                  style="font-size: 16px;"
                >
                  info
                </i>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                This is the business name you entered for your fleet member on square
              
                  </div>
                </span>
              </div>
               
              <div>
                
              Please connect to Square
            
              </div>
               
              <!---->
            </div>
             
            <div
              class="flex xs12 md4 pl-2"
            >
              <div
                class="layout justify-content-between column"
              >
                <div
                  class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
                >
                  
                Square location ID
              
                </div>
                 
                <div>
                  
                Please connect to Square
              
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex mb-2 xs12"
          >
            <div
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Owned by
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              height="48"
              label="Name"
              outline=""
              single-line=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 48px;"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      placeholder="Name"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Contact phone
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Phone"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            State of incorporation
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="State"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Website
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="www.example.com"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Facebook
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="facebook account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Twitter
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Twitter account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Instagram
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Instagram account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Food fleet staff notes
          
            </div>
             
            <div
              class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      placeholder="Food fleet staff notes"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs12 lg4 pl-3"
      >
        <div
          class="px-2 xs-12 md-4"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Truck / Trailer image
        
          </div>
           
          <input
            class="ff-fleet-members__image_input"
            type="file"
          />
           
          <div
            class="v-responsive v-image grey lighten-2"
          >
            <div
              class="v-image__image v-image__image--preload v-image__image--cover"
              mode="in-out"
              name="fade-transition"
              style="background-position: center center;"
            />
            <div
              class="v-responsive__content"
            />
          </div>
        </div>
         
        <div
          class="py-3 d-flex justify-space-between"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Upload Image
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete Image
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__actions pa-3 d-flex justify-space-between"
    >
      <div>
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Submit
      
          </div>
        </button>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/fleet-members/BasicInformation Snapshots Loading 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      <h3
        class="grey--text"
      >
        
      Basic Information
    
      </h3>
       
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear"
        role="progressbar"
        style="height: 7px;"
      >
        <div
          class="v-progress-linear__background primary"
          style="height: 7px; opacity: 0.3; width: 100%;"
        />
        <div
          class="v-progress-linear__bar"
        >
          <div
            class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
          >
            <div
              class="v-progress-linear__bar__indeterminate long primary"
            />
            <div
              class="v-progress-linear__bar__indeterminate short primary"
            />
          </div>
          <!---->
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout pa-3 row wrap"
    >
      <div
        class="flex xs12 lg8 pr-3"
      >
        <div
          class="layout row wrap"
        >
          <div
            class="flex xs12 md9 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Fleet member name
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md3"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Type
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md8"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Tags
          
            </div>
             
            <div
              class="v-input mb-4 v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              hide-details=""
              no-filter=""
              outline=""
              solo=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      autocomplete="off"
                      avatar-key="avatarKey"
                      placeholder="Type a tag"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md4 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Size of the truck / trailer
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="input value"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div
            class="layout mb-2 row wrap"
          >
            <div
              class="flex xs12 md4 pr-2"
            >
              <div
                class="text-uppercase grey--text font-weight-bold"
              >
                
              Square account
              
                <button
                  class="v-btn v-btn--icon v-btn--small theme--light"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey--text"
                      style="font-size: 16px;"
                    >
                      info
                    </i>
                  </div>
                </button>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                You will be prompted to enter 
                    <br />
                     your Square Credentials and share 
                    <br />
                     your transactional data with Food Fleet
              
                  </div>
                </span>
              </div>
               
              <button
                class="v-btn v-btn--depressed theme--light primary"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Connect
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12 md4 pr-2 pl-2"
            >
              <div
                class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
              >
                
              Square business name
              
                <i
                  aria-hidden="true"
                  class="v-icon ff-fleet-members__tooltip-icon material-icons theme--light grey--text"
                  style="font-size: 16px;"
                >
                  info
                </i>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                This is the business name you entered for your fleet member on square
              
                  </div>
                </span>
              </div>
               
              <div>
                
              Please connect to Square
            
              </div>
               
              <!---->
            </div>
             
            <div
              class="flex xs12 md4 pl-2"
            >
              <div
                class="layout justify-content-between column"
              >
                <div
                  class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
                >
                  
                Square location ID
              
                </div>
                 
                <div>
                  
                Please connect to Square
              
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex mb-2 xs12"
          >
            <div
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Owned by
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              height="48"
              label="Name"
              outline=""
              single-line=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 48px;"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      placeholder="Name"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Contact phone
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Phone"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            State of incorporation
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="State"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Website
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="www.example.com"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Facebook
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="facebook account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Twitter
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Twitter account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Instagram
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Instagram account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Food fleet staff notes
          
            </div>
             
            <div
              class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      placeholder="Food fleet staff notes"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs12 lg4 pl-3"
      >
        <div
          class="px-2 xs-12 md-4"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Truck / Trailer image
        
          </div>
           
          <input
            class="ff-fleet-members__image_input"
            type="file"
          />
           
          <div
            class="v-responsive v-image grey lighten-2"
          >
            <div
              class="v-image__image v-image__image--preload v-image__image--cover"
              mode="in-out"
              name="fade-transition"
              style="background-position: center center;"
            />
            <div
              class="v-responsive__content"
            />
          </div>
        </div>
         
        <div
          class="py-3 d-flex justify-space-between"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Upload Image
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete Image
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__actions pa-3 d-flex justify-space-between"
    >
      <div>
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--loader v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Submit
      
          </div>
          <span
            class="v-btn__loading"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="v-progress-circular v-progress-circular--indeterminate"
              role="progressbar"
              style="height: 23px; width: 23px;"
            >
              <svg
                style="transform: rotate(0deg);"
                viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  class="v-progress-circular__overlay"
                  cx="43.80952380952381"
                  cy="43.80952380952381"
                  fill="transparent"
                  r="20"
                  stroke-dasharray="125.664"
                  stroke-dashoffset="125.66370614359172px"
                  stroke-width="3.8095238095238093"
                />
              </svg>
              <div
                class="v-progress-circular__info"
              />
            </div>
          </span>
        </button>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/fleet-members/BasicInformation Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title"
    >
      <h3
        class="grey--text"
      >
        
      Basic Information
    
      </h3>
       
      <!---->
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout pa-3 row wrap"
    >
      <div
        class="flex xs12 lg8 pr-3"
      >
        <div
          class="layout row wrap"
        >
          <div
            class="flex xs12 md9 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Fleet member name
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md3"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Type
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        Mobile
                      </div>
                      <input
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Mobile
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Stationery
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md8"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Tags
          
            </div>
             
            <div
              class="v-input mb-4 v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              hide-details=""
              no-filter=""
              outline=""
              solo=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      autocomplete="off"
                      avatar-key="avatarKey"
                      placeholder="Type a tag"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md4 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Size of the truck / trailer
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="input value"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 pb-2"
          >
            <span
              class="v-chip v-chip--removable theme--light orange"
              tabindex="0"
            >
              <span
                class="v-chip__content"
              >
                
            ASIAN
          
                <div
                  class="v-chip__close"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    cancel
                  </i>
                </div>
              </span>
            </span>
            <span
              class="v-chip v-chip--removable theme--light orange"
              tabindex="0"
            >
              <span
                class="v-chip__content"
              >
                
            VEGAN
          
                <div
                  class="v-chip__close"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    cancel
                  </i>
                </div>
              </span>
            </span>
          </div>
           
          <div
            class="layout mb-2 row wrap"
          >
            <div
              class="flex xs12 md4 pr-2"
            >
              <div
                class="text-uppercase grey--text font-weight-bold"
              >
                
              Square account
              
                <button
                  class="v-btn v-btn--icon v-btn--small theme--light"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey--text"
                      style="font-size: 16px;"
                    >
                      info
                    </i>
                  </div>
                </button>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                You will be prompted to enter 
                    <br />
                     your Square Credentials and share 
                    <br />
                     your transactional data with Food Fleet
              
                  </div>
                </span>
              </div>
               
              <button
                class="v-btn v-btn--disabled v-btn--depressed theme--light error--text"
                disabled="disabled"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Disconnect
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12 md4 pr-2 pl-2"
            >
              <div
                class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
              >
                
              Square business name
              
                <i
                  aria-hidden="true"
                  class="v-icon ff-fleet-members__tooltip-icon material-icons theme--light grey--text"
                  style="font-size: 16px;"
                >
                  info
                </i>
                <span
                  class="v-tooltip v-tooltip--top"
                >
                  <div
                    class="v-tooltip__content"
                    style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
                  >
                    
                This is the business name you entered for your fleet member on square
              
                  </div>
                </span>
              </div>
               
              <!---->
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
                role="combobox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <div
                        class="v-select__selections"
                      >
                        <div
                          class="v-select__selection v-select__selection--comma"
                        >
                          Dummy 01
                        </div>
                        <input
                          aria-readonly="false"
                          autocomplete="on"
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              class="primary--text"
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Dummy 01
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    Default Test Account
                                  </div>
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12 md4 pl-2"
            >
              <div
                class="layout justify-content-between column"
              >
                <div
                  class="ff-fleet-members__basic_information mb-2 text-uppercase grey--text font-weight-bold d-flex justify-space-between position-relative pt-2"
                >
                  
                Square location ID
              
                </div>
                 
                <div
                  class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          disabled="disabled"
                          placeholder="Short description"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <div
                          class="v-messages__wrapper"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex mb-2 xs12"
          >
            <div
              class="text-uppercase grey--text font-weight-bold"
            >
              
            Owned by
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--solo-flat v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-select v-autocomplete v-input--hide-details theme--light"
              flat=""
              height="48"
              label="Name"
              outline=""
              single-line=""
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 48px;"
                >
                  <div
                    class="v-select__slot"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      placeholder="Name"
                      role="combobox"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light v-autocomplete__content"
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <div
                              class="v-list__tile theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  No data available
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Contact phone
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Phone"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            State of incorporation
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="State"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Website
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="www.example.com"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Facebook
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="facebook account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pr-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Twitter
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Twitter account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12 md6 pl-2"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Instagram
          
            </div>
             
            <div
              class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <input
                      placeholder="Instagram account"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="flex xs12"
          >
            <div
              class="mb-2 text-uppercase grey--text font-weight-bold"
            >
              
            Food fleet staff notes
          
            </div>
             
            <div
              class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      placeholder="Food fleet staff notes"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs12 lg4 pl-3"
      >
        <div
          class="px-2 xs-12 md-4"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Truck / Trailer image
        
          </div>
           
          <input
            class="ff-fleet-members__image_input"
            type="file"
          />
           
          <div
            class="v-responsive v-image grey lighten-2"
          >
            <div
              class="v-image__image v-image__image--preload v-image__image--cover"
              mode="in-out"
              name="fade-transition"
              style="background-position: center center;"
            />
            <div
              class="v-responsive__content"
            />
          </div>
        </div>
         
        <div
          class="py-3 d-flex justify-space-between"
        >
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Upload Image
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--disabled v-btn--depressed theme--light"
            disabled="disabled"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete Image
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__actions pa-3 d-flex justify-space-between"
    >
      <div>
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Cancel
      
          </div>
        </button>
         
        <button
          class="v-btn v-btn--depressed theme--light primary"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Save changes
      
          </div>
        </button>
      </div>
       
      <div
        style="text-align: right;"
      >
        <button
          class="v-btn v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Delete Fleet Member
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
